# agda-lsp

./: .gitignore  AgdaLSP.cabal  README.md  install.sh  run.sh  stack.yaml  test.sh  todo.txt
src/: AgdaToLSP.hs  Benchmarks.hs  CodeActions.hs  Completions.hs  Core.hs  Diagnostics.hs  Handlers.hs  ImplicitsDecls.hs  ImplicitsScope.hs  Main.hs  Rename.hs  Scope.hs  ScopeAnalysis.hs  ScopeAnalysisImplicitsTests.hs  ScopeAnalysisTests.hs  ScopeImport.hs  ScopeMap.hs  SemanticTokens.hs  SmokeTest.hs  State.hs  Traversal.hs
